@@ -1,3 +1,9 @@
+Wed May 28 13:21:13 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
+
+        * java/tests/messenger/subscriber/DataReaderListenerImpl.java:
+
+          Fixed not equals check.
+
 Wed May 28 13:01:40 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
 
         * tests/DCPS/Messenger/publisher.cpp:
